2006-01-15  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-password-dialog.c: (gnome_password_dialog_new):
	Always keep the password dialog on top. Patch from Christian
	Neumair. Reported as bug #163973 by Jorn Baayen.

2006-01-15  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-thumbnail.c: (gnome_thumbnail_factory_generate_thumbnail),
	(gnome_thumbnail_factory_save_thumbnail), (thumb_md5_transform):
	Save the width and height metadata as suggested by the spec. Patch
	from James Cape. Closes bug #143470.

2002-05-12  Glynn Foster  <glynn.foster@sun.com>

	* gnome-about.c: (gnome_about_display_credits_dialog): Set the 
	default response.

2002-04-23  jacob berkman  <jacob@ximian.com>

	* gnome_segv.c (main): set the default button to close

2002-04-22  Anders Carlsson  <andersca@gnu.org>

	* gnome-icon-entry.c: Use our own delete_event handler for the dialog
	so that it won't get destroyed. Fixes #75230.

Fri Apr 19 21:02:09 2002  George Lebl <jirka@5z.com>

	* gnome-about.c: Fix #77931, that is, open only one credits dialog.
	  when one is already open just gtk_window_present the dialog.

Fri Apr 19 16:25:18 2002  George Lebl <jirka@5z.com>

	* gnome-file-entry.c, gnome-icon-entry.c: export the file expanding
	  function from file-entry to icon-entry (underscore prefixed
	  function not in a header) and use this in icon entry so that
	  we can store our selection outside of the file entry which changes
	  often.  This way we fix #76640 and #77215.  Fix a few leaks
	  in icon entry.  Use gtk_window_present to show the dialog once
	  hidden.  Always reselect the picked icon on the dialog to have
	  proper 'Cancel' behaviour.

2002-04-09  jacob berkman  <jacob@ximian.com>

	* gnome-file-entry.c (tilde_expand): move up and fix some warnings

2002-04-09  Anders Carlsson  <andersca@gnu.org>

	* gnome-dialog.c (gnome_dialog_set_parent): Don't try to move
	the dialog over windows. Fixes #71076.

	* gnome-color-picker.c (drag_data_received): Emit color_changed